--- a/readme.adoc
+++ b/readme.adoc
@@ -1,7 +1,8 @@
-= darwin home-manager configuration
+= my nixos/home-manager flake configurations 
 
-* v0 非常初步的配置，没有做多平台适配，只是用来统一管理配置
-
+* darwin: home-manager only, I don't employ nix-darwin.
+* aarch64, x86_64 vm(cloud and local): nixos with embeded home-manager.
+* legacy linux os like ubuntu: home-manager only.
 == references
 
 .shell expansion
@@ -18,7 +19,7 @@
 https://www.nerdfonts.com/cheat-sheet
 
 
-== macOS 用户默认值配置
+== macOS user default settings
 
 NSUserDefaults
 
