--- a/readme.adoc
+++ b/readme.adoc
@@ -4,6 +4,16 @@
 * aarch64, x86_64 vm(cloud and local): nixos with embeded home-manager.
 * legacy linux distribution like ubuntu: home-manager only.
 
+
+== bootstrap tips
+
+----
+: make pin-registry
+: nix shell nixpkgs#git nixpkgs#home-manager
+: home-manager switch --flake .
+: sudo nixos-rebuild switch --flake .#utm-vm
+----
+
 == references
 
 .shell expansion
@@ -19,15 +29,13 @@
 
 https://www.nerdfonts.com/cheat-sheet
 
-
-== macOS user default settings
+.macOS user default settings
 
 NSUserDefaults
 
 https://juejin.cn/post/6844903464300969991
 
-
-== macOS awesome apps
+.macOS awesome apps
 
 https://github.com/icopy-site/awesome-cn/blob/master/docs/awesome/open-source-mac-os-apps.md
 
