--- a/readme.adoc
+++ b/readme.adoc
@@ -24,6 +24,27 @@ nix --extra-experimental-features nix-command --extra-experimental-features flak
 : sudo nixos-rebuild switch --flake .#utm-vm
 ----
 
+== installation
+
+=== new disk install
+
+=== in-place installation by copytoram
+
+
+=== lustrate installation
+
+----
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ nix profile install --profile /nix/var/nix/profiles/system .#nixosConfigurations.slim.config.system.build.toplevel
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo chown -R 0:0 /nix
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo touch /etc/NIXOS
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo touch /etc/NIXOS_LUSTRATE
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ echo etc/nixos | sudo tee -a /etc/NIXOS_LUSTRATE
+etc/nixos
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo mv -v /boot /boot.bak
+renamed '/boot' -> '/boot.bak'
+ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo /nix/var/nix/profiles/system/bin/switch-to-configuration boot
+----
+
 == references
 
 .shell expansion
