--- a/readme.adoc
+++ b/readme.adoc
@@ -33,21 +33,29 @@ nix --extra-experimental-features nix-command --extra-experimental-features flak
 
 === lustrate installation
 
-Install nix via https://nixos.org/manual/nix/stable/installation/single-user.html[Single-user installation^]
-
-
-Then, install nixos from a flake:
+first, install nix, then install nixos from the flake:
 
 ----
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ nix profile install --profile /nix/var/nix/profiles/system .#nixosConfigurations.slim.config.system.build.toplevel
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo chown -R 0:0 /nix
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo touch /etc/NIXOS
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo touch /etc/NIXOS_LUSTRATE
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ echo etc/nixos | sudo tee -a /etc/NIXOS_LUSTRATE
+$ bash <(curl -L https://nixos.org/nix/install) --daemon
+$ e2label /dev/vda1 nixos
+$ mkdir ~/.config/nix
+$ cat <<EOF >~/.config/nix/nix.conf
+experimental-features = nix-command flakes
+keep-outputs = true
+keep-derivations = true
+max-jobs = auto
+EOF
+$ nix profile install --profile /nix/var/nix/profiles/system github:penglei/nix-configs#nixosConfigurations.slim.config.system.build.toplevel
+$ sudo chown -R 0:0 /nix
+$ sudo touch /etc/NIXOS
+$ sudo touch /etc/NIXOS_LUSTRATE
+$ echo etc/nixos | sudo tee -a /etc/NIXOS_LUSTRATE
 etc/nixos
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo mv -v /boot /boot.bak
+$ sudo mv -v /boot /boot.bak
 renamed '/boot' -> '/boot.bak'
-ubuntu@VM-0-3-ubuntu:~/nix-configs$ sudo /nix/var/nix/profiles/system/bin/switch-to-configuration boot
+$ sudo /nix/var/nix/profiles/system/bin/switch-to-configuration boot
+$ shutdown -r now
+$ nix-collect-garbage
 ----
 
 == references
