replace neofetch with fastfetch

--- a/readme.adoc
+++ b/readme.adoc
@@ -4,6 +4,12 @@
 * aarch64, x86_64 vm(cloud and local): nixos with embeded home-manager.
 * legacy linux distribution like ubuntu: home-manager only.
 
+== home-manager tips
+
+```
+home-manager news --flake .
+```
+
 == bootstrap tips
 
 
